[gd_scene load_steps=3 format=3 uid="uid://xtkde6wlhv0u"]

[ext_resource type="Script" path="res://gui/canvas/properties/StatePropertyEditor.gd" id="1_dyivk"]
[ext_resource type="PackedScene" uid="uid://d3bfs3ikhudtv" path="res://gui/widgets/PropertyEditorButton.tscn" id="2_aeuej"]

[node name="StatePropertyEditor" type="MarginContainer"]
theme_type_variation = &"StatePropertyEditor"
script = ExtResource("1_dyivk")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="AvailableStates" type="VBoxContainer" parent="Layout"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Layout"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="CreateContainer" type="HBoxContainer" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2

[node name="CreateName" type="LineEdit" parent="Layout/CreateContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateButton" parent="Layout/CreateContainer" instance=ExtResource("2_aeuej")]
unique_name_in_owner = true
layout_mode = 2
text = "Add"
